# Matrix_rkpp

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: Matrix.cpp.7F0FF9DDED7AAE06.idx  Matrix.h.1FCB05154BE38F92.idx  Rational.cpp.AB9D8901E36B433E.idx  Rational.h.6DF7CD44C37D5A99.idx  SquareMatrix.cpp.A25D09E747C37BF2.idx  SquareMatrix.h.64D67B6953499322.idx  main.cpp.F9F3CACAD83FB7B4.idx
include/: Matrix.h  Rational.h
src/: Rational.cpp
